add module federation, update dockerfile, nginx_template,add IS_MF argument. add loadRemoteConfig.js function.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/mlrun",
   "dependencies": {
+    "@module-federation/vite": "^1.2.6",
     "@monaco-editor/react": "^4.7.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "1.8.2",
@@ -15,6 +16,7 @@
     "cronstrue": "^2.49.0",
     "dagre": "^0.8.5",
     "dotenv": "^10.0.0",
+    "dotenv-cli": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "file-saver": "^2.0.5",
     "final-form": "^4.20.10",
@@ -56,11 +58,12 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "build:federation:dev": "dotenv -e .env.development.local-build -- vite build && node scripts/previewLocalBuildMF.mjs",
     "lint": "eslint .",
     "preview": "vite preview",
     "preinstall": "npx force-resolutions",
     "test:coverage": "npm run test -- --coverage --watchAll=false",
-    "docker": "docker build -t ${MLRUN_DOCKER_REGISTRY}${MLRUN_DOCKER_REPO:-mlrun}/mlrun-ui:${MLRUN_DOCKER_TAG:-latest} --build-arg COMMIT_HASH=\"`git rev-parse --short HEAD`\" --build-arg DATE=\"`date -u`\" -f Dockerfile .",
+    "docker": "docker buildx build --platform linux/amd64 -t ${MLRUN_DOCKER_REGISTRY}${MLRUN_DOCKER_REPO:-mlrun}/mlrun-ui:${MLRUN_DOCKER_TAG:-latest} --build-arg COMMIT_HASH=\"`git rev-parse --short HEAD`\" --build-arg DATE=\"`date -u`\" --build-arg IS_MF=${npm_config_IS_MF:-false} -f Dockerfile .",
     "generate-rn": "./generate-release-notes.js ${MLRUN_OLD_VERSION} ${MLRUN_VERSION} ${MLRUN_RELEASE_BRANCH} ${MLRUN_RELEASE_TYPE}",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
