--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,8 @@
 VITE_PUBLIC_URL=/mlrun
+VITE_BASE_URL=/mlrun
+VITE_REACT_ROUTER_BASE_NAME=/mlrun
+VITE_FEDERATION=
+
 VITE_MLRUN_API_URL=${MLRUN_API_PROXY_URL}
 VITE_MLRUN_V3IO_ACCESS_KEY=${MLRUN_V3IO_ACCESS_KEY}
 VITE_IGUAZIO_API_URL=
