--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "stylelint": "stylelint '**/*.{css,scss}'",
     "preview": "vite preview",
     "preinstall": "npx force-resolutions",
     "test:coverage": "npm run test -- --coverage --watchAll=false",
@@ -140,11 +141,12 @@
     "sass-loader": "^12.3.2",
     "selenium-webdriver": "^4.35.0",
     "source-map-loader": "^5.0.0",
-    "stylelint": "^13.3.3",
+    "stylelint": "^16.21.0",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.17.2",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-order": "^7.0.0",
+    "stylelint-scss": "^6.12.1",
     "url-loader": "4.1.1",
     "vite": "^6.2.0",
     "vite-plugin-commonjs": "^0.10.4",
