--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,7 +5,12 @@
   ],
   "rules": {
     "at-rule-no-unknown": null,
+    "selector-no-vendor-prefix": null,
+    "scss/at-mixin-argumentless-call-parentheses": null,
+    "scss/dollar-variable-empty-line-before": null,
     "scss/at-rule-no-unknown": true,
+    "media-feature-range-notation": null,
+    "property-no-vendor-prefix": null,
     "selector-class-pattern": [
       "^[a-z0-9]+(?:-[a-z0-9]+)*(?:__(?:[a-z0-9]+(?:-[a-z0-9]+)*))*(?:_(?:[a-z0-9]+(?:-[a-z0-9]+)*)(?:_[a-z0-9]+(?:-[a-z0-9]+)*)?)?$",
       {
