--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "stylelint": "stylelint '**/*.{css,scss}'",
+    "stylelint": "stylelint '**/*.scss' --fix",
     "preview": "vite preview",
     "preinstall": "npx force-resolutions",
     "test:coverage": "npm run test -- --coverage --watchAll=false",
