Update and add tests: - extend alerts tests with new verification data - update tests for model endpoint filtering

--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "react-dev-utils": "^12.0.1",
     "sass": "^1.72.0",
     "sass-loader": "^12.3.2",
-    "selenium-webdriver": "^4.0.0-beta.2",
+    "selenium-webdriver": "^4.35.0",
     "source-map-loader": "^5.0.0",
     "stylelint": "^13.3.3",
     "stylelint-config-rational-order": "^0.1.2",
