--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "test:coverage": "npm run test -- --coverage --watchAll=false",
     "docker": "docker build -t ${MLRUN_DOCKER_REGISTRY}${MLRUN_DOCKER_REPO:-mlrun}/mlrun-ui:${MLRUN_DOCKER_TAG:-latest} --build-arg COMMIT_HASH=\"`git rev-parse --short HEAD`\" --build-arg DATE=\"`date -u`\" -f Dockerfile .",
     "generate-rn": "./generate-release-notes.js ${MLRUN_OLD_VERSION} ${MLRUN_VERSION} ${MLRUN_RELEASE_BRANCH} ${MLRUN_RELEASE_TYPE}",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "build-storybook": "build-storybook",
     "mock-server": "node scripts/mockServer.js",
     "mock-server:dev": "nodemon --watch tests/mockServer scripts/mockServer.js",
@@ -81,15 +81,16 @@
     "@babel/plugin-transform-logical-assignment-operators": "^7.27.1",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "@babel/register": "^7.28.3",
     "@cucumber/cucumber": "^10.3.1",
     "@d4c/numjs": "^0.17.34",
     "@eslint/js": "^9.36.0",
-    "@storybook/addon-actions": "^8.0.1",
-    "@storybook/addon-essentials": "^8.0.1",
-    "@storybook/addon-links": "^8.0.1",
+    "@storybook/addon-docs": "9.1.10",
+    "@storybook/addon-links": "^9.1.10",
+    "@storybook/builder-vite": "^9.1.10",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^8.0.1",
+    "@storybook/react-vite": "^9.1.10",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -113,6 +114,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-storybook": "9.1.10",
     "express": "^5.1.0",
     "geckodriver": "^6.0.1",
     "globals": "^16.4.0",
@@ -133,7 +135,7 @@
     "stylelint-order": "^7.0.0",
     "stylelint-scss": "^6.12.1",
     "url-loader": "4.1.1",
-    "vite": "^6.2.0",
+    "vite": "^6.3.6",
     "vite-plugin-commonjs": "^0.10.4",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^4.5.0"
@@ -149,6 +151,10 @@
           "useBuiltIns": "usage",
           "corejs": "^3.23.3"
         }
+      ],
+      [
+        "@babel/preset-react",
+        {}
       ]
     ]
   }
