update readme file, update loadDevProxyConfig to support windows

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 VITE_PUBLIC_URL=/mlrun
-VITE_FEDERATION=true
+VITE_FEDERATION=false
 VITE_MLRUN_API_URL=${MLRUN_API_PROXY_URL}
 VITE_MLRUN_V3IO_ACCESS_KEY=${MLRUN_V3IO_ACCESS_KEY}
 VITE_IGUAZIO_API_URL=
