--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview:federation": "PREVIEW_MODE=true dotenv -e .env.development.mf -- vite build && node scripts/previewLocalBuildMF.mjs",
+    "preview:federation": "cross-env PREVIEW_MODE=true dotenv -e .env.development.mf -- vite build && node scripts/previewLocalBuildMF.mjs",
     "lint": "eslint .",
     "preview": "vite preview",
     "preinstall": "npx force-resolutions",
