--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "build": "vite build",
     "lint": "eslint 'src/**/*.{js,jsx}'",
     "lint:fix": "eslint 'src/**/*.{js,jsx}' --fix",
-    "format:check": "prettier --check 'src/**/*.{js,jsx,mjs}'",
+    "format:check": "prettier --check 'src/**/*.{js,jsx}'",
     "format:write": "prettier --write 'src/**/*.{js,jsx}'",
     "preview": "vite preview",
     "preinstall": "npx force-resolutions",
