--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,17 @@
+# Copyright 2019 Iguazio
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 name: CI
 
 permissions:
@@ -5,16 +19,47 @@ permissions:
 
 on:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
     branches:
-      - development                    # Matches the development branch
+      - development
       - 'feature/**'                   # Matches branches like 'feature/***'
       - '[0-9]+.[0-9]+.x'              # Matches branches like '1.3.x'
       - '[0-9]+.[0-9]+.[0-9]+'         # Matches branches like '1.2.3'
       - '[0-9]+.[0-9]+.[0-9]+_.*'      # Matches branches like '1.7.0_cpj_mm'
       - '[0-9]+.[0-9]+.[0-9]+-.*'      # Matches branches like '1.2.3-feature'
-
+  push:
+    branches:
+      - chore/repo-infra-enhancements
 
 jobs:
+  pr_actions:
+    name: PR Actions
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checking Out
+        uses: actions/checkout@v3
+
+      - name: Preparing Node Env
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Verifying Lint
+        run: npm run lint
+
+      - name: Verifying Formatting
+        run: npm run format:check
+
+      - name: Build
+        id: build
+        run: npm run build
+
   check-copyright:
     name: Check Copyright Existence
     runs-on: ubuntu-latest
@@ -28,53 +73,13 @@ jobs:
           deno run --allow-read https://deno.land/x/license_checker@v3.2.3/main.ts
       - name: Instructions For Adding Copyright
         if: ${{ failure() }}
-        run: |
-          echo "
-          Please add the following lines to the top of your code:
-          .yaml/Dockerfile/.yml/.py :
-          # Copyright 2018 Iguazio
-          #
-          # Licensed under the Apache License, Version 2.0 (the "License");
-          # you may not use this file except in compliance with the License.
-          # You may obtain a copy of the License at
-          #
-          #   http://www.apache.org/licenses/LICENSE-2.0
-          #
-          # Unless required by applicable law or agreed to in writing, software
-          # distributed under the License is distributed on an "AS IS" BASIS,
-          # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-          # See the License for the specific language governing permissions and
-          # limitations under the License.
-
-          .js :
-          /*
-          Copyright 2019 Iguazio Systems Ltd.
-
-          Licensed under the Apache License, Version 2.0 (the "License") with
-          an addition restriction as set forth herein. You may not use this
-          file except in compliance with the License. You may obtain a copy of
-          the License at http://www.apache.org/licenses/LICENSE-2.0.
-
-          Unless required by applicable law or agreed to in writing, software
-          distributed under the License is distributed on an "AS IS" BASIS,
-          WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
-          implied. See the License for the specific language governing
-          permissions and limitations under the License.
-
-          In addition, you may not use the software for any purposes that are
-          illegal under applicable law, and the grant of the foregoing license
-          under the Apache 2.0 license is conditioned upon your compliance with
-          such restriction.
-          */
-
-          "
+        run: echo ${{ vars.COPYRIGHT_TEXT }}
 
   build-docker:
     name: Build Docker
     runs-on: ubuntu-latest
     outputs:
       igz-controls-import-error: ${{ steps.check-error.outputs.igz-controls-import-error }}
-
     steps:
       - name: Exit if merge commit
         if: github.event.pull_request.merged == true
@@ -103,34 +108,3 @@ jobs:
             echo "::set-output name=igz-controls-import-error::success"
             echo "igz-controls-import-error=success" >> $GITHUB_ENV
           fi
-
-  lint-check:
-    name: Lint Check
-    runs-on: ubuntu-latest
-    needs: build-docker
-    if: failure() && needs.build-docker.outputs.igz-controls-import-error == 'failure'
-    steps:
-      - name: Exit if merge commit
-        if: github.event.pull_request.merged == true
-        run: |
-          echo "Skipping workflow because this is a merge commit."
-          exit 0
-
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: get needs object
-        run: echo "${{toJson(needs)}}"
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run ESLint
-        run: |
-          export NODE_ENV=production
-          npx eslint 'src/**/*.js'
